home/Deployments/blog-kc/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-kc-ingress
  namespace: blog-kc-system
spec:
  ingressClassName: nginx-external
  rules:
  - host: kristinac.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog-kc-svc
            port:
              number: 80
